@@ -19,8 +19,8 @@
 #   USA.
 #
 
-obj-$(CONFIG_ETHERNET) += ethernet.o
-obj-$(CONFIG_CMD_ARP)  += arp.o
-obj-$(CONFIG_CMD_RARP) += rarp.o
-obj-$(CONFIG_CMD_TFTP) += tftp.o
-obj-$(CONFIG_CMD_PING) += ping.o
+obj-$(CONFIG_ETHERNET)		+= ethernet.o
+obj-$(CONFIG_CMD_IPCONFIG)	+= ipconfig.o
+obj-$(CONFIG_CMD_PING)		+= ping.o
+obj-$(CONFIG_CMD_ARP)		+= arp.o
+obj-$(CONFIG_CMD_TFTP)		+= tftp.o
